# SmartAquariumDeviceSupervisor

./: .travis.yml  CMakeLists.txt  conanfile.txt  device-supervisor.xml  main.cpp  smartaquarium-device-supervisor
include/device_supervisor/: application.hpp  logger.hpp  target.cpp  target.hpp  task.hpp  task_configuration.hpp  task_local.hpp  task_remote.hpp
src/: application.cpp  logger.cpp  main.cpp  target.cpp  task.cpp  task_configuration.cpp  task_local.cpp  task_remote.cpp
